--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-colorama==0.4.4
+colorama==0.4.5
 BAC0==21.12.3
-pythonping==1.1.1
 EasyModbus==1.4.0
-requests==2.27.1
 pandas==1.4.0
-getmac==0.8.3
-func-timeout
+loguru==0.6.0
